feat(tmux.conf): set escape-time as a workaround for neovim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,9 @@ set -g visual-activity on
 # Center the window list
 set -g status-justify centre
 
+# set escape-timeout (neovim workaround)
+set -g escape-time 10
+
 # split panes using | and -
  bind | split-window -h
  bind - split-window -v
