feat(tmux.conf): at three tmux plugins an initialize tpm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,3 +41,10 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 
+# List of plugins
+set -g @plugin 'laktak/extrakto'           # Autocomplete text that is already on the screen
+set -g @plugin 'schasse/tmux-jump'         # Jump wherever you want in your terminal
+set -g @plugin 'tmux-plugins/tmux-urlview' # Quickly open any url on your terminal window
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
