feat(tmux): increase buffer size and disable xterm style clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,12 @@
 # Mouse support - set to on if you want to use the mouse
 set -g mouse on
 
+# Increase buffer size
+set-option -g history-limit 10000
+
+# Disable xterm style clipboard
+set-option -s set-clipboard off
+
 # remap prefix to Control + a
 set -g prefix C-a
 # bind 'C-a C-a' to type 'C-a'
