feat(tmux): enable vi style copy/paste

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,17 @@ unbind C-b
 # Enable vi on copy-mode
 set -g mode-keys vi
 
+# vi style copy/paste
+bind p paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle \
+                             \; send-keys -X begin-selection
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'pbcopy'
+bind-key -T copy-mode-vi \
+         MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'pbcopy'
+
 # Set the default terminal mode to 256color mode
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
