--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,9 +27,12 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'pbcopy'
 bind-key -T copy-mode-vi \
          MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'pbcopy'
 
+# Enable focus-events, needed by nvim |'autoread'|
+set-option -g focus-events on
+
 # Set the default terminal mode to 256color mode
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",tmux-256color:Tc"
 
 # enable activity alerts
 setw -g monitor-activity on
