feat(tmux): configure extrakto_filter_order

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,6 +53,11 @@ unbind %
 # reload config
 bind r source-file ~/.tmux.conf
 
+##############
+#  Extracto  #
+##############
+set -g @extrakto_filter_order "word quote s-quote path line all"
+
 source-file ~/.powerline.conf
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
