feat(tmux): add tmux-fzf plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,6 +70,7 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 set -g @plugin 'laktak/extrakto'           # Autocomplete text that is already on the screen
 set -g @plugin 'schasse/tmux-jump'         # Jump wherever you want in your terminal
 set -g @plugin 'tmux-plugins/tmux-urlview' # Quickly open any url on your terminal window
+set -g @plugin 'sainnhe/tmux-fzf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
